fix overflow for tooltips

--- a/source/sass/blocks/user-catalog-item.scss
+++ b/source/sass/blocks/user-catalog-item.scss
@@ -13,6 +13,7 @@
   }
 
   @media #{$min-desktop} {
+    overflow: visible;
     grid-template: repeat(2, min-content) 102px / max-content 205px 11% 1fr min-content;
   }
 
